# shelf

./: .env.sample  .gitignore  Dockerfile  Makefile  pyproject.toml  shelf-config.yaml
.github/workflows/: dockerimage.yml
docker/: Dockerfile
docs/: doc_template.md  makefile.md  poetry.md
scripts/: main.sh
shelf/: cli.py  error_handler.py  main.py  setup.py  shelf.py  utils.py
shelf/hook_samples/: aspell-hook.sh  commit-msg  commit-msg.sh
shelf/rules/: rule.py
shelf/rules/body/: body.py
shelf/rules/header/: header.py
shelf/rules/trailers/: trailers.py
tests/: test_sample.py  test_shelf.py
