[tool.poetry]
name = "shelf"
version = "0.1.0"
description = "A git flow management"
authors = ["lvittor <lvittor@itba.edu.ar>", "learodriguez <learodriguez@itba.edu.ar>","juanigarcia <juanigarcia@itba.edu.ar>","mbartellini <mbartellini@itba.edu.ar>","jbrave <jbrave@itba.edu.ar>","festevez <festevez@itba.edu.ar>"] 
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.9b0"
isort = "^5.9.3"
coverage = "^5.5"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
coverage = { version = "^5.5", extras = ["toml"]}

[tool.black]
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.coverage]
    [tool.coverage.run]

    source = ["src"]
    branch = true
    omit = ['']

    [tool.coverage.report]
    exclude_lines = [
        "# noqa",
        "raise NotImplementedError",
        "if __name__ == .__main__.:",
    ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
